--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "body-parser": "^1.13.2",
     "cookie-parser": "^1.3.5",
+    "cookie-session": "^2.0.0-alpha.3",
     "express": "^4.13.1",
-    "express-session": "^1.11.3"
+    "express-session": "^1.11.3",
+    "helmet": "^3.4.0"
   }
 }
